nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-study
  labels:
    app: nginx-study
spec:
  selector:
    app: nginx-study
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
