nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-study
  labels:
    app: nginx-study
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx-study
